--- a/src/KidzyBundle/Resources/views/enfant/enfant.html.twig
+++ b/src/KidzyBundle/Resources/views/enfant/enfant.html.twig
@@ -23,8 +23,9 @@
                 </div><!-- end col -->
 
             <!-- end row -->
-                <div class="col-md-4" id="searchWrapper">
-            <li class="d-none d-sm-block right">
+
+                <div class="col-md-4" id="searchWrapper" align="right">
+            <li class="d-none d-sm-block right"  >
 
                 <form class="app-search">
                     <div class="app-search-box">
@@ -107,6 +108,7 @@
                 {% endfor %}
 
             </div>
+            <div class="text-center" style="">{{ knp_pagination_render(enfantss) }} </div>
         </div>
         <!-- end container-fluid -->
 
